--- a/css/style.css
+++ b/css/style.css
@@ -96,39 +96,54 @@
   width: 100%;
   height: 77vw;
   position: relative;
-  overflow: hidden;
+  overflow-x: scroll;
+  overflow-y: hidden;
 }
 
-.background .page .today-list .data-wrap .today-wrap {
-  position: absolute;
-  left: 0;
-  top: 4vw;
+.background .page .today-list .data-wrap .items {
+  position: relative;
+  width: 100%;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+  -webkit-transform: scale(0.98);
+          transform: scale(0.98);
+  will-change: transform;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  cursor: pointer;
   margin-left: 4vw;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
 }
 
-.background .page .today-list .data-wrap .today-wrap li {
-  float: left;
+.background .page .today-list .data-wrap .items:active {
+  cursor: -webkit-grabbing;
+  cursor: grabbing;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+
+.background .page .today-list .data-wrap .items .item {
+  display: inline-block;
   width: 53vw;
   margin-right: 4vw;
 }
 
-.background .page .today-list .data-wrap .today-wrap li .thumb {
+.background .page .today-list .data-wrap .items .item .thumb {
   width: 100%;
   height: 53vw;
 }
 
-.background .page .today-list .data-wrap .today-wrap li .thumb img {
+.background .page .today-list .data-wrap .items .item .thumb img {
   width: 100%;
   height: 100%;
   border-radius: 3vw;
 }
 
-.background .page .today-list .data-wrap .today-wrap li .summary h3 {
+.background .page .today-list .data-wrap .items .item .summary h3 {
   white-space: nowrap;
   font-size: 4.7vw;
   margin-top: 2vw;
@@ -136,7 +151,7 @@
   width: 70%;
 }
 
-.background .page .today-list .data-wrap .today-wrap li .summary small {
+.background .page .today-list .data-wrap .items .item .summary small {
   opacity: 0.7;
   font-size: 3.1vw;
   display: block;
