--- a/css/style.scss
+++ b/css/style.scss
@@ -91,16 +91,29 @@ $borc: #e6e6eb;
                 width: 100%;
                 height: 77vw;
                 position: relative;
-                overflow: hidden;
-                .today-wrap {
-                    position: absolute;
-                    left: 0;
-                    top: 4vw;
+                overflow-x:scroll;
+                overflow-y: hidden;
+
+                .items {
+                    position: relative;
+                    width:100%;
+                    overflow-x:scroll;
+                    overflow-y:hidden;
+                   white-space:nowrap;
+                   transition:all .2s;
+                   transform:scale(0.98);
+                   will-change:transform;
+                   user-select:none;
+                   cursor:pointer;
                     margin-left: 4vw;
-                    display: flex;
-                    flex-wrap: nowrap;
-                    li {
-                        float: left;
+                    
+                    &:active{
+                        cursor:grabbing;
+                        transform:scale(1);
+                    }
+
+                    .item {
+                      display:inline-block;
                         width: 53vw;
                         margin-right: 4vw;
                         .thumb {
