--- a/css/map.scss
+++ b/css/map.scss
@@ -151,45 +151,51 @@ $borc: #e6e6eb;
 }
 .slider {
     position: relative;
+    bottom:-350px;
+    left:0px;
     z-index: 100;
     width: 100%;
-    height:50vw;
+    height:auto;
     overflow:hidden;
 
     .listbox {
-        position: absolute;
-        bottom: 0;
-        left:0;
-
+        &.active{
+            cursor:grabbing;
+            transform:scale(1);
+            background:rgba(255,255,255,0.3);
+        }
+      
         .items {
-         
+          
             border-radius: 2px;
             padding: 10px 0;
             font-size: 14px;
             position: relative;
+           display:flex;
+            z-index:100;
             width:100%;
-            overflow:hidden;
+            height:200px;
+            transition:transform 3s ease-in-out;
            white-space:nowrap;
            transition:all .2s;
            transform:scale(0.98);
            will-change:transform;
            user-select:none;
            cursor:move;
-            margin-left: 5vw;
-            flex-direction: column;
-            &.active{
-                cursor:grabbing;
-                transform:scale(1);
-                background:rgba(255,255,255,0.3);
-            }
-
+            margin-left: 20px;
+          
+           
+           
            .item {
+              
+            flex-direction: column;
                 border: 1px solid rgba(34, 34, 40, 0.15);
-                margin-right: 4vw;
+                background:#fff;
+                margin-right: 20px;
                 padding: 16px 15px;
                 border: 1px solid $borc;
-                width: 400px; height:200px;
-               display:inline-block;
+                width: 450px; 
+               display:flex;
               .con{
                    
                 .leftsec {
@@ -199,7 +205,7 @@ $borc: #e6e6eb;
                     padding:1%;           
                     overflow: hidden;
                     .thumb {
-                      width:100%; height:100%;
+                      width:100px; height:100px;
                         img {
                             width:100%; height:100%;
                             border-radius: 3vw;
@@ -207,7 +213,7 @@ $borc: #e6e6eb;
                       }
                     }
                 .rightsec {
-                    width: 70%;
+                    width: 300px;
                     display: inline-block;
                     vertical-align: top;
                     box-sizing: border-box;
