--- a/css/map.css
+++ b/css/map.css
@@ -218,22 +218,30 @@
   display: flex;
 }
 
+.slider .listbox .items .item .con {
+  margin-left: 1%;
+}
+
 .slider .listbox .items .item .con .leftsec {
   display: inline-block;
   width: 30%;
   font-size: 0;
-  padding: 1%;
   overflow: hidden;
 }
 
 .slider .listbox .items .item .con .leftsec .thumb {
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: 100%;
+}
+
+.slider .listbox .items .item .con .leftsec .thumb > a {
+  width: 100%;
+  height: 100%;
 }
 
 .slider .listbox .items .item .con .leftsec .thumb img {
-  width: 100%;
-  height: 100%;
+  width: 100px;
+  height: 100px;
   border-radius: 3vw;
 }
 
@@ -257,9 +265,7 @@
 }
 
 .slider .listbox .items .item .con .rightsec > div > span {
-  font-size: 15px;
-  color: #999999;
-  margin-right: 15px;
+  display: none;
 }
 
 .slider .listbox .items .item .con .rightsec > h6 {
