--- a/css/map.scss
+++ b/css/map.scss
@@ -200,17 +200,21 @@ $borc: #e6e6eb;
                 width: 430px; 
             display:flex;
               .con{
-                   
+                margin-left:1%;
                 .leftsec {
                     display: inline-block;
                     width: 30%;
                     font-size: 0;
-                    padding:1%;           
+                               
                     overflow: hidden;
                     .thumb {
-                      width:100px; height:100px;
+                        width:100%; height:100%;
+                       > a{
+                           width:100%; height:100%;
+                        }
                         img {
-                            width:100%; height:100%;
+                            width:100px; height:100px;
+                          
                             border-radius: 3vw;
                         }
                       }
@@ -231,9 +235,7 @@ $borc: #e6e6eb;
                            
                         }
                         > span {
-                            font-size: 15px;
-                            color: #999999;
-                            margin-right:15px;
+                           display:none;
                         }
                     }
                    
