--- a/css/style.scss
+++ b/css/style.scss
@@ -86,7 +86,7 @@ $borc: #e6e6eb;
     .searchbox {
         display:none;
         width: 100%;
-        padding: 2vw;
+        padding: 1vw;
         background: #fff;
         &.active{
             display:block;
@@ -236,6 +236,7 @@ $borc: #e6e6eb;
                 }
                 .level {
                     width: 90%;
+                    margin-top:3%;
                     flex-wrap:wrap;
                   > a{
                        cursor:pointer;
